# logcat_symbolizer

./: CMakeLists.txt  LICENSE  README.md  logcat_symbolizer.kdev4
src/: CMakeLists.txt  logcat_parser.cc  main.cc  main.cpp  retext_outputter.cc  text_outputter.cc
src/headers/: logcat_symbolizer_facilities.h
src/include/: logcat_parser.h  retext_outputter.h  sanitize_info.h  text_outputter.h
text/: INFO.txt
